tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_bitwise_or_assign_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingBitwiseOrAssignRhs;

fn main() -> i32 {
  let value = 4;
  value |= ;
  return value;
}
